# fluent-monorepo

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  FLUENT_WVR.md  LICENSE-Contributor-Agreement  Makefile  README.md  ROADMAP_20260510_ARENAS_CHECKLIST.md  ROADMAP_20260608_ZIG_TO_RUST.md  ROADMAP_20260608_ZIG_TO_RUST_CHECKLIST.md  STRUCTURE.md  build.zig  build.zig.zon  libc.conf  mise.toml  package.json  pyproject.toml
rust-src/: Cargo.toml
rust-src/common/: Cargo.toml
rust-src/common/src/: builder_error.rs  constants.rs  content_node.rs  csr_graph.rs  drift.rs  embeddings.rs  entity.rs  error_context.rs  file_lock.rs  format.rs  freq_table.rs  hash.rs  interner.rs  io.rs  lib.rs  metrics.rs  pattern.rs  query_cache.rs  registry.rs  shell.rs  source.rs  string.rs  terminal.rs  traits.rs  trigram_index.rs  type_inference.rs  types.rs  url.rs  word_index.rs  wrapper.rs
rust-src/coral/: Cargo.toml
rust-src/coral/src/: cache_l1.rs  cache_reactor.rs  cache_router.rs  db.rs  ingest.rs  lib.rs  mcp.rs  wasm_runtime.rs
rust-src/dag/: Cargo.toml
rust-src/dag/src/: executor.rs  lib.rs  middleware.rs  registry.rs  resolver.rs  work_unit.rs
rust-src/fixtures/sample-project/: main.py  main.rs
rust-src/guidance/: Cargo.toml
rust-src/guidance/src/: ast_parser.rs  enhancer.rs  lib.rs  plugin.rs  query_engine.rs  sync_engine.rs
rust-src/llm/: Cargo.toml
rust-src/llm/src/: anonymize.rs  client.rs  context_packer.rs  decomposer.rs  lib.rs
rust-src/ontology/: Cargo.toml
rust-src/ontology/src/: lib.rs  migration.rs  yago.rs
rust-src/rdf/src/: lib.rs  nquads.rs
rust-src/wasm_ipc/src/: lib.rs
src/common/: Cargo.toml  args.zig  builder_error.zig  builder_error_tests.zig  cli.zig  constants.zig  content_node.zig  context.zig  csr_graph.zig  dag_executor.zig  dep_graph.zig  doc_registry.zig  drift.zig  embeddings.zig  embeddings_tests.zig  entity.zig  error_context.zig  file_lock.zig  format.zig  freq_table.zig  frozen_snapshot.zig  hash.zig  index_header.zig  interner.zig  io.zig  io_tests.zig  json.zig  json_parser.zig  json_tests.zig  kg.zig  limits.zig  llm.zig  local_model.zig  log.zig  logging.zig  logging_tests.zig  metrics.zig  pattern.zig  pattern_tests.zig  query_cache.zig  (+26 more)
src/common-core/: Cargo.toml
src/common-core/src/: config.rs  constants.rs  error.rs  format.rs  git.rs  hash.rs  interner.rs  io.rs  jsonrpc.rs  lib.rs  shell.rs  shell_parser.rs  sqlite.rs  string.rs  tokens.rs  walk.rs
src/common/src/: builder_error.rs  content_node.rs  embeddings.rs  entity.rs  error.rs  file_lock.rs  format.rs  freq_table.rs  frozen_snapshot.rs  hash.rs  index_header.rs  interner.rs  io.rs  lib.rs  metrics.rs  pattern.rs  query_cache.rs  registry.rs  source.rs  string.rs  terminal.rs  trigram_index.rs  types.rs  url.rs  word_index.rs  wrapper.rs
src/common/vaxis_stub/: root.zig
src/common/zigrc_stub/: root.zig
src/common/zigsharedstring_stub/: root.zig
src/content-node/: Cargo.toml
src/content-node/src/: doc_node.rs  file_node.rs  lib.rs  lod.rs  node.rs  source_node.rs  wvr.rs
src/coral/: Cargo.toml  agent_loop.zig  algorithm_runner.zig  anonymize.zig  batch.zig  benchmark.zig  cache.zig  cache_l1.zig  cache_reactor.zig  cache_router.zig  cache_test.zig  cli.zig  config.zig  context_compressor.zig  context_node_schema.zig  context_packer.zig  csr_graph.zig  db.zig  delegation.zig  drift.zig  executor.zig  fixtures.zig  frontier.zig  frontier_tool_compiler.zig  frozen_snapshot.zig  global_search.zig  http_transport.zig  http_transport_test.zig  main.zig  mcp.zig  metrics.zig  pattern.zig  quantized_embedding.zig  root.zig  schema.zig  scrub.zig  session.zig  targets.zig  token_budget.zig  tool_registry.zig  (+4 more)
src/coral/algorithms/: degree_centrality.zig  louvain.zig  pagerank.zig  shortest_path.zig  union_find.zig
src/coral/common/: args.zig  context.zig  format.zig  hash.zig  interner.zig  json_parser.zig  llm.zig  reflection.zig  repl.zig  source.zig  target.zig  terminal.zig
src/coral/src/: cache_l1.rs  cache_reactor.rs  cache_router.rs  db.rs  error.rs  ingest.rs  lib.rs  mcp.rs  packer.rs  test_stubs.rs  tier_units.rs  wasm_runtime.rs  wvr.rs
src/dag/: Cargo.toml  context.zig  dag_executor.zig  json_parser.zig  registry.zig  repl.zig  resolver.zig  root.zig  target.zig
src/dag-executor/: Cargo.toml
src/dag-executor/src/: adapter.rs  executor.rs  lib.rs  middleware.rs  resolver.rs
src/dag/src/: adapter.rs  drift.rs  error.rs  executor.rs  interner.rs  lib.rs  middleware.rs  resolver.rs  target.rs  type_inference.rs  work_unit.rs  wvr.rs
src/fluent-concurrency/: Cargo.toml
src/fluent-concurrency/src/: capability.rs  flow.rs  lib.rs  pool.rs  queue.rs  router.rs  scope.rs  tokio_api_check.rs  tokio_api_check4.rs  zone.rs
src/fluent-wvr/: Cargo.toml
src/fluent-wvr/src/: lib.rs  metrics.rs  string.rs  wrapper.rs
src/guidance/: Cargo.toml  agents_md.zig  ast_parser.zig  closet.zig  codebase_map.zig  codehealth.zig  comment_cache.zig  comment_checker.zig  comment_inserter.zig  comment_parser.zig  comment_sync.zig  config.zig  db.zig  deps.zig  doc_parser.zig  doc_parser_tests.zig  document_indexer.zig  document_indexer_tests.zig  enhancer.zig  enhancer_tests.zig  git.zig  git_tests.zig  gitignore.zig  hash.zig  hash_tests.zig  header_generator.zig  identifier_match.zig  infer_capabilities.zig  json_store.zig  lance_db.zig  line_verify.zig  llm_filter.zig  llm_filter_batch.zig  main.zig  marker.zig  mcp.zig  pattern.zig  plugin.zig  plugin_registry.zig  plugin_registry_tests.zig  (+30 more)
src/guidance/codehealth/: build_validation.zig  build_validation_tests.zig  extractor.zig  main.zig  main_tests.zig  orphan.zig  orphan_tests.zig  test_audit.zig  (+2 more)
src/llm/: Cargo.toml  anonymize.zig  context_compressor.zig  context_node_schema.zig  context_packer.zig  llm.zig  root.zig  token_budget.zig
src/memory-plugin/: Cargo.toml
src/ontology/: Cargo.toml  inference.zig  mapper.zig  migration.zig  root.zig  yago.zig
src/project-common/: Cargo.toml
src/project-knowledge/: Cargo.toml
src/registry/: Cargo.toml
src/search-vector/: Cargo.toml
(+923 files in other folders)
