[workspace]
resolver = "2"
members = [
    "src/types",
    "src/fluent-wvr",
    "src/project-knowledge",
    "src/search-vector",
    "src/content-node",
    "src/guidance",
    "src/coral",
    "src/dag",
    "src/llm",
    "src/wasm_ipc",
    "src/rdf",
    "src/ontology",
    "src/bin/guidance",
    "src/bin/coral",
    "src/concurrency-queue",
]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
# CLI & FS
clap = { version = "4", features = ["derive"] }
notify = "7"
blake3 = "1.8"

# Strings
smol_str = { version = "0.3", features = ["serde"] }
internment = { version = "0.8", features = ["arc", "serde"] }

# Data
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Builders
bon = "3"

# Database
rusqlite = { version = "0.34", features = ["bundled"] }
# sqlite-vec not yet available as a Rust crate; we use manual cosine fallback

# Orchestration
bitvec = "1"
extism = "1"
async-openai = "0.28"

# Parsing
tree-sitter = "0.25"
tree-sitter-zig = "1.1.2"
tree-sitter-python = "0.25.0"

# Async
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# HTTP
ureq = { version = "3", features = ["json"] }


# Testing
tempfile = "3"
httpmock = "0.7"

# System
libc = "0.2"
sha2 = "0.10"
thiserror = "2"
tracing = "0.1"
memmap2 = "0.9"
fs2 = "0.4"
time = "0.3"
regex = "1"
lazy_static = "1"
dashmap = "6"
lru = "0.13"
which = "4"
dirs = "6"
