[workspace]
resolver = "2"
members = [
    "src/fluent-wvr",
    "src/fluent-wvr-macros",
    "src/fluent-concurrency",
    "src/llm",
    "src/bin/guidance",
    "src/coral",
    "src/guidance",
    "src/dag",
    "src/types",
    "src/common-core",
    "src/content-node",
    "src/search-vector",
    "src/rdf",
    "src/ontology",
    "src/project-knowledge",
    "src/wasm_ipc",
]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
# CLI & FS
clap = { version = "4", features = ["derive"] }
notify = "7"
blake3 = "1.8"

# Strings
smol_str = { version = "0.3", features = ["serde"] }
internment = { version = "0.8", features = ["arc", "serde"] }

# Data
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Builders
bon = "3"

# Database
rusqlite = { version = "0.34", features = ["bundled"] }
# sqlite-vec not yet available as a Rust crate; we use manual cosine fallback

# Orchestration
bitvec = "1"
extism = "1"
async-openai = "0.28"

# Parsing
tree-sitter = "0.25"
tree-sitter-zig = "1.1.2"
tree-sitter-python = "0.25.0"

# Async
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# HTTP
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }


# Testing
tempfile = "3"
httpmock = "0.7"

# Randomness
fastrand = "2"

# Macros
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"

# System
libc = "0.2"
sha2 = "0.10"
thiserror = "2"
tracing = "0.1"
memmap2 = "0.9"
fs2 = "0.4"
time = "0.3"
regex = "1"
dashmap = "6"
lru = "0.13"
which = "4"
dirs = "6"
