[workspace]
resolver = "2"
members = [
    "common",
]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
blake3 = "1.8"
smol_str = "0.3"
internment = { version = "0.8", features = ["arc"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bitvec = "1"
sha2 = "0.10"
thiserror = "2"
tracing = "0.1"
rusqlite = { version = "0.34", features = ["bundled"] }
memmap2 = "0.9"
fs2 = "0.4"
time = "0.3"
regex = "1"
tempfile = "3"
