[package]
name = "guidance-coral"
version.workspace = true
edition.workspace = true

[dependencies]
guidance-common = { path = "../common" }
guidance-llm = { path = "../llm" }
guidance-ontology = { path = "../ontology" }
guidance-wasm-ipc = { path = "../wasm_ipc" }
serde = { workspace = true }
serde_json = { workspace = true }
internment = { workspace = true }
bitvec = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
bon = { workspace = true }
rusqlite = { workspace = true }
tokio = { workspace = true }
regex = { workspace = true }
ureq = { workspace = true }
dashmap = { workspace = true }
extism = { workspace = true }
