[package]
name = "common-core"
version.workspace = true
edition.workspace = true

[dependencies]
blake3 = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
lazy_static = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
