[package]
name = "common-core"
version.workspace = true
edition.workspace = true

[dependencies]
bitvec = { workspace = true }
blake3 = { workspace = true }
internment = { workspace = true, features = ["arc"] }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
