[package]
name = "guidance-common"
version.workspace = true
edition.workspace = true

[dependencies]
bon = { workspace = true }
async-trait = { workspace = true }
ureq = { workspace = true }
blake3 = { workspace = true }
smol_str = { workspace = true }
internment = { workspace = true, features = ["arc"] }
serde = { workspace = true }
serde_json = { workspace = true }
bitvec = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
rusqlite = { workspace = true }
memmap2 = { workspace = true }
fs2 = { workspace = true }
libc = { workspace = true }
time = { workspace = true }
regex = { workspace = true }
lazy_static = "1"
tempfile = { workspace = true }
tokio = { workspace = true, features = ["rt"] }
guidance-traits = { path = "../traits" }

[dev-dependencies]
httpmock = { workspace = true }
