[package]
name = "guidance-content-node"
version.workspace = true
edition.workspace = true

[dependencies]
guidance-types = { path = "../types" }
guidance-common = { path = "../common" }
serde = { workspace = true }  # TODO(M6): unused dep?
internment = { workspace = true, features = ["arc", "serde"] }  # TODO(M6): unused dep?
blake3 = { workspace = true }
thiserror = { workspace = true }  # TODO(M6): unused dep?
