[package]
name = "coral-context"
version.workspace = true
edition.workspace = true

[dependencies]
fluent-wvr = { path = "../fluent-wvr" }
common-core = { path = "../common-core", features = ["sqlite"] }
guidance-types = { path = "../types" }
guidance-search-vector = { path = "../search-vector" }
guidance-llm = { path = "../llm" }
guidance-ontology = { path = "../ontology" }
guidance-rdf = { path = "../rdf" }
guidance-wasm-ipc = { path = "../wasm_ipc" }
serde = { workspace = true }
serde_json = { workspace = true }
internment = { workspace = true }
bitvec = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
bon = { workspace = true }
rusqlite = { workspace = true }
regex = { workspace = true }
lru = { workspace = true }
extism = { workspace = true }
hnsw_rs = { workspace = true }
anndists = { workspace = true }
