[package]
name = "fluent-dag"
version.workspace = true
edition.workspace = true

[dependencies]
common-core = { path = "../common-core", features = ["sqlite"] }
guidance-types = { path = "../types" }
fluent-wvr = { path = "../fluent-wvr" }
bitvec = { workspace = true }
internment = { workspace = true, features = ["arc"] }
thiserror = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
bon = { workspace = true }

[dev-dependencies]
fluent-wvr-testutil = { path = "../fluent-wvr-testutil" }
tempfile = { workspace = true }
