[package]
name = "fluent-concurrency"
version.workspace = true
edition.workspace = true

[dependencies]
tokio = { workspace = true }
fluent-wvr = { path = "../fluent-wvr" }
serde_json = { workspace = true }
internment = { workspace = true, features = ["arc", "serde"] }
thiserror = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tempfile = { workspace = true }
