[package]
name = "fluent-wvr"
version.workspace = true
edition.workspace = true

[dependencies]
blake3 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
rusqlite = { workspace = true }
libc = { workspace = true }
lazy_static = "1"
internment = { workspace = true, features = ["arc", "serde"] }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
httpmock = { workspace = true }
