[package]
name = "fluent-wvr"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
internment = { workspace = true, features = ["arc", "serde"] }
tracing = { workspace = true }
tokio = { workspace = true }
