[package]
name = "guidance-guidance"
version.workspace = true
edition.workspace = true

[dependencies]
fluent-wvr = { path = "../fluent-wvr" }
guidance-project-knowledge = { path = "../project-knowledge" }
guidance-types = { path = "../types" }
guidance-search-vector = { path = "../search-vector" }
guidance-llm = { path = "../llm" }
serde = { workspace = true }
serde_json = { workspace = true }
smol_str = { workspace = true }
internment = { workspace = true }
bitvec = { workspace = true }
blake3 = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
bon = { workspace = true }
tree-sitter = { workspace = true }
tree-sitter-zig = { workspace = true }
tree-sitter-python = { workspace = true }
rusqlite = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
notify = { workspace = true }
regex = { workspace = true }
fs2 = { workspace = true }
tempfile = { workspace = true }
which = { workspace = true }
dirs = { workspace = true }

[dev-dependencies]
httpmock = { workspace = true }
