[package]
name = "guidance-core"
version.workspace = true
edition.workspace = true

[dependencies]
common-core = { path = "../common-core" }
guidance-project-knowledge = { path = "../project-knowledge" }
guidance-types = { path = "../types" }
guidance-search-vector = { path = "../search-vector" }
guidance-llm = { path = "../llm" }
fluent-concurrency = { path = "../fluent-concurrency" }
fluent-wvr = { path = "../fluent-wvr" }
serde = { workspace = true }
serde_json = { workspace = true }
smol_str = { workspace = true }
internment = { workspace = true }
bitvec = { workspace = true }
blake3 = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
bon = { workspace = true }
tree-sitter = { workspace = true }
tree-sitter-zig = { workspace = true }
tree-sitter-python = { workspace = true }
tree-sitter-rust = { workspace = true }
rusqlite = { workspace = true }
clap = { workspace = true }
notify = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "sync", "macros"] }
regex = { workspace = true }
fs2 = { workspace = true }
tempfile = { workspace = true }
which = { workspace = true }
dirs = { workspace = true }

[dev-dependencies]
httpmock = { workspace = true }
