[package]
name = "guidance-llm"
version.workspace = true
edition.workspace = true

[dependencies]
project-common = { path = "../project-common" }
guidance-concurrency-queue = { path = "../concurrency-queue" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros", "sync"] }
regex = { workspace = true }

ureq = { workspace = true }
bon = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
httpmock = { workspace = true }
