[package]
name = "guidance-llm"
version.workspace = true
edition.workspace = true

[dependencies]
common-core = { path = "../common-core" }
fluent-concurrency = { path = "../fluent-concurrency" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros", "sync"] }
regex = { workspace = true }

ureq = { workspace = true }
bon = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
httpmock = { workspace = true }
