[package]
name = "guidance-ontology"
version.workspace = true
edition.workspace = true

[dependencies]
guidance-common = { path = "../common" }
guidance-types = { path = "../types" }
guidance-rdf = { path = "../rdf" }
blake3 = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
lazy_static = "1"
