[package]
name = "project-common"
version.workspace = true
edition.workspace = true

[dependencies]
blake3 = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
rusqlite = { workspace = true }
libc = { workspace = true }
lazy_static = "1"

[dev-dependencies]
tempfile = { workspace = true }
