[package]
name = "guidance-project-knowledge"
version.workspace = true
edition.workspace = true

[dependencies]
project-common = { path = "../project-common" }
rusqlite = { workspace = true }
blake3 = { workspace = true }
lazy_static = "1"
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
