[package]
name = "guidance-project-knowledge"
version.workspace = true
edition.workspace = true

[dependencies]
common-core = { path = "../common-core" }
rusqlite = { workspace = true }
blake3 = { workspace = true }
lazy_static = "1"
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
