[package]
name = "guidance-project-knowledge"
version.workspace = true
edition.workspace = true

[dependencies]
common-core = { path = "../common-core", features = ["sqlite"] }
rusqlite = { workspace = true }
blake3 = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
fluent-wvr-testutil = { path = "../fluent-wvr-testutil" }
