[package]
name = "guidance-search-vector"
version.workspace = true
edition.workspace = true

[dependencies]
common-core = { path = "../common-core" }
rusqlite = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
hnsw_rs = { workspace = true }
anndists = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
